views and controllers for users log in

--- a/private/app/views/layouts/_header.html.erb
+++ b/private/app/views/layouts/_header.html.erb
@@ -1,26 +1,20 @@
 <header>
-  <div>
-    <%= link_to "Private Events", root_path , id: "logo" %>
-  </div>
-  <nav>
-    <ul>
-      <li><%= link_to "All Events", root_path %></li>
-        <% if logged_in? %>
-          <ul>
-            <li>
-              <%= link_to "Create Event", new_event_path %>
-            </li>
-            <li>
-              <%= link_to "My Profile", user_path(current_user) %>
-            </li>
-            <li>
-              <%= link_to "Sign out", logout_path, method: :delete %>
-            </li>
-          </ul>
-      <% else %>
-        <li><%= link_to "Sign up", new_user_path %></li>
-        <li><%= link_to "Sign in", login_path %></li>
-      <% end %>
-    </ul>
-  </nav>
+  <div class = "container">
+    <div class= "row">
+        <div class= "col-12 pt-3 pb-3 mb-4 border-bottom">
+            <div class= "float-right">
+                <% if log_in? %>
+                    <%= link_to "Log Out", logout_path,  method: :delete, class: "btn btn-primary"  %>
+                <% else  %>
+                    <%= link_to "Log in", new_user_path, class: "btn btn-outline-primary" %>
+                    <%= link_to "Sign Up", login_path, class: "btn btn-primary" %>
+                <% end  %>
+            </div>
+            <p class="h3">PrivateMerbers</p>
+            <div>
+              <%= link_to "Private Events", root_path , id: "root" %>
+            </div>
+        </div>
+    </div>
+</div>
 </header>
