--- a/private/app/views/users/create.html.erb
+++ b/private/app/views/users/create.html.erb
@@ -1,2 +1,7 @@
-<h1>Users#create</h1>
-<p>Find me in app/views/users/create.html.erb</p>
+<div class= "container">
+    <div class ="row">
+    <div class ="col-sm-12">
+        <p class="bg-info text-white">This text represents some information, allegedly.</p>
+    </div>
+    </div>
+</div>
