--- a/private/app/views/users/new.html.erb
+++ b/private/app/views/users/new.html.erb
@@ -1,13 +1,15 @@
 <section class="sign-up">
-<h1>SIGN UP</h1>
-<%#= render 'shared/error_messages' %>
-<%= form_for(@user, url: users_path) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email %>
+      <h2>SingUp</h2>
+      
+      <%= form_for(@user, url: users_path) do |f| %>
+            <%= f.label :name %>
+            <%= f.text_field :name %>
 
-      <%= f.submit "Create my account" %>
-<% end %>
+            <%= f.label :email %>
+            <%= f.email_field :email , autofocus: true, autocomplete: "email" %>
+
+            <%= f.submit "Sign up" %>
+      <% end %>
+
 </section> 
