--- a/private/app/views/users/show.html.erb
+++ b/private/app/views/users/show.html.erb
@@ -1,4 +1,12 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
-<p><%= @user.name %></p>
-<p><%= @user.email %></p>
+
+
+<div class= "container">
+    <div class ="row">
+    <div class ="col-sm-12">
+        <p class="bg-info text-white">Hi Mr.<h2><%= @user.name %></h2></p>
+    </div>
+    <div class ="col-sm-12">
+        <p class="bg-info text-white">EMail: <p><%= @user.email %></p></p>
+    </div>
+    </div>
+</div>
