--- a/private/app/views/events/show.html.erb
+++ b/private/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
                 <p><%= @event.user.name %></p>
                 <p><%= @event.name %></p>
                 <p><%= @event.location %></p>
-                <p><%= @event.date_event %></p>
+                <p><%= @event.date %></p>
                 <p><%= @event.description %></p>
             </div>
         </div>
