--- a/private/app/views/events/index.html.erb
+++ b/private/app/views/events/index.html.erb
@@ -4,7 +4,7 @@
       <div class ="row">
         <div class ="col-sm-12">
             <p class="h3">PrivateMerbers EVENTS</p>
-                <% if logged_in? %>
+                <% if log_in? %>
                     <p>Welcome back Mr: <%= current_user.name %></p>
                 <% end %>
 
@@ -13,7 +13,7 @@
                     <div>
                         <p><%= event.name %></p>
                         <p><%= event.location %></p>
-                        <p><%= event.date_event %></p>
+                        <p><%= event.date %></p>
                         <p><%= event.description %></p>
                     </div>
                     <% end %>
