--- a/private/app/views/users/show.html.erb
+++ b/private/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
 
     <% if @user.created_events.empty? %>
         <div class ="col-sm-12">
-            <p class="bg-info text-white">EMail: <p><%= @user.id %></p></p>
+            <p class="bg-info text-white">EMail: <p><%= @user.email %></p></p>
         </div>
     <% else %>
 
