--- a/private/app/views/events/show.html.erb
+++ b/private/app/views/events/show.html.erb
@@ -12,5 +12,15 @@
             </div>
         </div>
     </div>
+    <div class="card" style="width: 18rem;">
+        <ul class="list-group list-group-flush">
 
+            <% @event.attendees.each do |attendee| %>
+                <li class="list-group-item"><%= attendee.name %></li>
+                <li class="list-group-item"><%= attendee.email %></li>
+            <% end %>
+            
+        </ul>
+    </div>
 </section>
+
