--- a/private/app/views/layouts/_header.html.erb
+++ b/private/app/views/layouts/_header.html.erb
@@ -1,21 +1,21 @@
 <header>
   <div class = "container">
-    <div class= "row">
-        <div class= "col-12 pt-3 pb-3 mb-4 border-bottom">
-            <div class= "float-right">
-                <% if log_in? %>
-                    
-                    <%= link_to "Log Out", logout_path,  method: :delete, class: "btn btn-primary"  %>
-                <% else  %>
-                    <%= link_to "Log in", new_user_path, class: "btn btn-outline-primary" %>
-                    <%= link_to "Sign Up", login_path, class: "btn btn-primary" %>
-                <% end  %>
-            </div>
-            <p class="h3">PrivateMerbers</p>
-            <div>
-              <%= link_to "Private Events", root_path , id: "root" %>
-            </div>
-        </div>
-    </div>
+    
+        <nav class="navbar navbar-dark bg-dark text-white">
+                <p class="h3 text-white">PrivateMembers</p>
+                <div class= "float-right">
+                    <% if log_in? %>
+                        <%= link_to "Log Out", logout_path,  class: "btn btn-primary" %>
+                        <%= link_to "New Event", new_event_path, class: "btn btn-outline-success" %>
+                        <%= link_to "Events", events_path, class: "btn btn-outline-success" %>
+                    <% else  %>
+                        <%= link_to "Sign Up", new_user_path, class: "btn btn-outline-primary" %>
+                        <%= link_to "Log in", login_path, class: "btn btn-primary" %>
+                    <% end  %>
+                </div>
+                
+            
+        </nav>
+    
 </div>
 </header>
