--- a/private/app/views/users/new.html.erb
+++ b/private/app/views/users/new.html.erb
@@ -1,15 +1,20 @@
-<section class="sign-up">
+<%= render partial: "layouts/header" %>
+      <div class = 'container'>
+            <section class="sign-up mt-5">
 
-      <h2>SingUp</h2>
-      
-      <%= form_for(@user, url: users_path) do |f| %>
-            <%= f.label :name %>
-            <%= f.text_field :name %>
+                  <h2>SingUp</h2>
+                  
+                  <%= form_for(@user, url: users_path) do |f| %>
+                        <%= f.label :name %>
+                        <%= f.text_field :name %>
+                        <br>
+                        <%= f.label :email %>
+                        
+                        <%= f.email_field :email , autofocus: true, autocomplete: "email" %>
 
-            <%= f.label :email %>
-            <%= f.email_field :email , autofocus: true, autocomplete: "email" %>
+                        <%= f.submit "Sign up" %>
+                  <% end %>
 
-            <%= f.submit "Sign up" %>
-      <% end %>
-
-</section> 
+            </section>
+      </div>
+<%= render partial: "layouts/footer" %>
