--- a/private/app/views/layouts/_header.html.erb
+++ b/private/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
                         <%= link_to "Log Out", logout_path,  class: "btn btn-primary" %>
                         <%= link_to "New Event", new_event_path, class: "btn btn-outline-success" %>
                         <%= link_to "Events", events_path, class: "btn btn-outline-success" %>
+                        <%= link_to "Profile", current_user, class: "btn btn-outline-success" %>
                     <% else  %>
                         <%= link_to "Sign Up", new_user_path, class: "btn btn-outline-primary" %>
                         <%= link_to "Log in", login_path, class: "btn btn-primary" %>
