--- a/private/app/views/static_pages/home.html.erb
+++ b/private/app/views/static_pages/home.html.erb
@@ -20,7 +20,15 @@
         </div>
       </div>
     </div>
-    
+
+  
+    <h1>ALL EVENTS</h1>
+    <p class="title-events">Upcoming Events</p>
+    <%= render partial:'shared/event', locals: { events: @events_upcoming } %>
+    <p class="title-events">Past Events</p>
+    <%= render partial:'shared/event', locals: { events: @events_past } %>
+
+
   <%= render partial: "layouts/footer" %>
   </body>
 </html>
