--- a/private-events-1/private/app/views/static_pages/home.html.erb
+++ b/private-events-1/private/app/views/static_pages/home.html.erb
@@ -24,9 +24,9 @@
   
     <h1>ALL EVENTS</h1>
     <p class="title-events">Upcoming Events</p>
-    <%= render partial:'shared/event', locals: { events: @events_upcoming } %>
+    <%= render partial:'shared/event', locals: { events: Event.past.paginate(page: params[:page], per_page: 5) } %>
     <p class="title-events">Past Events</p>
-    <%= render partial:'shared/event', locals: { events: @events_past } %>
+    <%= render partial:'shared/event', locals: { events: Event.upcoming.paginate(page: params[:page], per_page: 5) } %>
 
 
   <%= render partial: "layouts/footer" %>
