inpendent event views

--- a/private-events-1/private/app/views/events/show.html.erb
+++ b/private-events-1/private/app/views/events/show.html.erb
@@ -4,7 +4,7 @@
         <div class ="row">
             <div class ="col-sm-12">
                 <p class="h3">PrivateMerbers Events</p>
-                <p><%= @event.user.name %></p>
+                <p><%= @event.creator.name %></p>
                 <p><%= @event.name %></p>
                 <p><%= @event.location %></p>
                 <p><%= @event.date %></p>
