--- a/private-events-1/private/app/views/shared/_event.html.erb
+++ b/private-events-1/private/app/views/shared/_event.html.erb
@@ -1,5 +1,6 @@
 <% events.each do |event| %>
 <ul class="container">
+    <li>Event Name: <%= link_to event.name, event_path(event) %></li>
     <li><%= event.location %></li>
     <li>Location: <%= event.location %></li>
     <li><%= time_tag event.date %></li>
