--- a/private-events-1/private/app/views/events/show.html.erb
+++ b/private-events-1/private/app/views/events/show.html.erb
@@ -1,32 +1,50 @@
 <%= render partial: "layouts/header" %>
-<section class="create-event">
+<section class="create-event bg-dark">
 
-    <div class= "container">
-        <div class ="row">
+    <div class= "container bg-secondary pt-5" style="height: 40rem" >
+        <div class ="row pt-5">
             <div class ="col-sm-12">
                 
-                <p><%= @event.creator.name %></p>
-                <p><%= @event.name %></p>
-                <p><%= @event.location %></p>
-                <p><%= @event.date %></p>
-                <p><%= @event.description %></p>
+                <div class="d-flex justify-content-center">
+                    <div class="card" style="width: 40rem; height: 25rem">
+                        <div class="card-body text-white bg-dark">
+                            <h5 class="card-title"><%= @event.creator.name %></h5>
+                            <h6 class="card-subtitle mb-2 text-muted"><%= @event.name %></h6>
+                            <p><%= @event.location %></p>
+                            <p><%= @event.date %></p>
+                            <p><%= @event.description %></p>
+                        </div>
+                        <div class= 'd-flex justify-content-center bg-dark pb-5'>
+                            <%= link_to "attend",  events_attend_path(user_id: current_user, event_id: @event.id ), class: "btn btn-success " %>
+                        </div>
+                    </div>
+                </div>   
                 
             </div>
         </div>
-        <%= link_to "attend",  events_attend_path(user_id: @event.creator.id, event_id: @event.id ), class: "btn btn-outline-success" %>
+          
     </div>
-    <div class="card" style="width: 18rem;">
-        <ul class="list-group list-group-flush">
 
-            <% @event.attendees.each do |attendee| %>
+    <div class= "container bg-secondary mt-5" style="height: 45rem" >
+        <div class ="row pt-5 d-flex justify-content-center">
+        <h2 class="card-title pl-40 text-white text-center ">Attendees</h2>
+        
+            <div class ="col-sm-12">
+                <div class="d-flex justify-content-center">
+                
+                    <div class="card"  style="width: 18rem;">
 
-                <li class="list-group-item"><%= attendee.name %></li>
-                <li class="list-group-item"><%= attendee.email %></li>
-            <% end %>
-            
-        </ul>
-    
+                        <% @event.attendees.each do |attendee| %>
+                            <br>
+                            <h5 class="card-title text-center"><%= attendee.name %></h5>
+                            <br>
+                        <% end %>|
+                            
+                        
+                    </div>
+                </div>
+            </div>    
+        </div>    
     </div>
-    
 </section>
 
