--- a/private-events-1/private/app/views/users/show.html.erb
+++ b/private-events-1/private/app/views/users/show.html.erb
@@ -22,19 +22,37 @@
         </div>
     <% else %>
         <div>
-            
-                <% @user.user_events.each do |event| %>
+            Upcoming
+                <% @attended_upcoming_events.each do |event| %>
                 <div class = 'bg-dark text-white text-center' >
                     ...
                 </div>
                 <ul>
-                    <li><%= link_to <%= Event.find_by_id(event.event_id).name %> , events_path((event.event_id), class: "btn btn-success " %>
-                    </li>
-                    <li><%= Event.find_by_id(event.event_id).location %></li>
-                    <li><%= Event.find_by_id(event.event_id).date %></li>
+                
+                    
+                    <li><%= Event.find_by_id(event.id).name %></li>
+                    <li><%= Event.find_by_id(event.id).location %></li>
+                    <li><%= Event.find_by_id(event.id).date %></li>
                 </ul>
                 <% end %>
-            </ul>
+            
+        </div>
+        <br>
+        <div>
+            Pass
+                <% @attended_past_events.each do |event| %>
+                <div class = 'bg-dark text-white text-center' >
+                    ...
+                </div>
+                <ul>
+                
+                    
+                    <li><%= Event.find_by_id(event.id).name %></li>
+                    <li><%= Event.find_by_id(event.id).location %></li>
+                    <li><%= Event.find_by_id(event.id).date %></li>
+                </ul>
+                <% end %>
+            
         </div>
         
 
